@@ -2,6 +2,9 @@
 
 (2007-09-25)
  * Updated the Hungarian translation.
+ * Bugfix: Drag&drop didn't work with *.part files, as the extension
+   matched with a subtitle extension (*.rt), so it was tried to be loaded
+   as a subtitle.
 
 (2007-09-23)
  * Updated the Romanian translation.
